--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quiz-@keto_carnivoras_news",
+  "name": "quiz-carnívora",
   "private": true,
   "version": "0.0.0",
   "type": "module",
